konvert/console-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: console
  name: console
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: console
  template:
    metadata:
      labels:
        io.kompose.network/redpanda-owl-shop-redpanda-network: "true"
        io.kompose.service: console
    spec:
      containers:
        - args:
            - -c
            - echo "$(CONSOLE_CONFIG_FILE)" > /tmp/config.yml; /app/console
          command:
            - /bin/sh
          image: docker.redpanda.com/redpandadata/console:v2.2.4
          name: console
          ports:
            - containerPort: 8080
      restartPolicy: Always
