konvert/kafka-lag-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: kafka-lag-exporter
  name: kafka-lag-exporter
spec:
  ports:
    - name: "4000"
      port: 4000
      targetPort: 4000
  selector:
    io.kompose.service: kafka-lag-exporter
