konvert/redpanda-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: redpanda
  name: redpanda
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
    - name: "8082"
      port: 8082
      targetPort: 8082
    - name: "9092"
      port: 9092
      targetPort: 9092
    - name: "9644"
      port: 9644
      targetPort: 9644
    - name: "29092"
      port: 29092
      targetPort: 29092
  selector:
    io.kompose.service: redpanda
